add to home screen added

--- a/index.html
+++ b/index.html
@@ -573,6 +573,7 @@
       </div>
     </div>
   </div>
+  <div class="ad2hs-prompt">Install me</div>
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
@@ -600,6 +601,40 @@
         console.log('Service worker has been registered for scope:'+ reg.scope);
       });
     }
+  </script>
+
+<script>
+  var deferredPrompt;
+  window.addEventListener('beforeinstallprompt', function (e) {
+    // Prevent Chrome 67 and earlier from automatically showing the prompt
+    e.preventDefault();
+    // Stash the event so it can be triggered later.
+    deferredPrompt = e;
+    showAddToHomeScreen();
+  });
+  function showAddToHomeScreen() {
+    var a2hsBtn = document.querySelector(".ad2hs-prompt");
+    a2hsBtn.style.display = "block";
+    a2hsBtn.addEventListener("click", addToHomeScreen);
+  }
+  function addToHomeScreen() {  var a2hsBtn = document.querySelector(".ad2hs-prompt");  // hide our user interface that shows our A2HS button
+    a2hsBtn.style.display = 'none';  // Show the prompt
+    deferredPrompt.prompt();  // Wait for the user to respond to the prompt
+    deferredPrompt.userChoice
+      .then(function(choiceResult){
+    if (choiceResult.outcome === 'accepted') {
+      console.log('User accepted the A2HS prompt');
+    } else {
+      console.log('User dismissed the A2HS prompt');
+    }
+    deferredPrompt = null;
+  });}
+  var a2hsBtn = document.querySelector(".ad2hs-prompt");
+  if (window.matchMedia('(display-mode: standalone)').matches) {
+    a2hsBtn.style.display = 'none';
+  }else{
+    a2hsBtn.style.display = 'block';
+  }
   </script>
 
 </body>
